--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3"
